--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build and Package Qt Project
 
 on:
   push:
@@ -13,34 +13,84 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Qt
       uses: jurplel/install-qt-action@v2
       with:
-        version: '5.15.2'  # Specify the Qt version you need
-        host: 'linux'
+        version: '5.15.2' # 选择你需要的Qt版本
+        host: 'ubuntu-20.04'
         target: 'desktop'
         arch: 'gcc_64'
-        dir: '$HOME/Qt'
-    
+
     - name: Install build dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential qt5-qmake qtbase5-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev debhelper devscripts
-    
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential devscripts debhelper qtbase5-dev libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev
+
     - name: Build the project
       run: |
-        cd ../$GITHUB_WORKSPACE
-        /home/runner/Qt/5.15.2/gcc_64/bin/qmake
+        cd src
+        qmake
         make
 
-    - name: Package the project
+    - name: Set up debian package directory
       run: |
-        cd $GITHUB_WORKSPACE
-        debuild -us -uc
-    
-    - name: Upload Debian package
+        mkdir -p debian
+        echo "9" > debian/compat
+        cat << EOF > debian/control
+        Source: teapotrending
+        Section: misc
+        Priority: optional
+        Maintainer: Your Name <your.email@example.com>
+        Build-Depends: debhelper (>= 9), qtbase5-dev, libgl1-mesa-dev, libglu1-mesa-dev, freeglut3-dev
+        Standards-Version: 3.9.6
+        Homepage: http://example.com
+
+        Package: teapotrending
+        Architecture: any
+        Depends: \${shlibs:Depends}, \${misc:Depends}
+        Description: A Qt application for rendering a teapot using OpenGL
+         A simple Qt application that uses OpenGL to render a teapot.
+        EOF
+
+        cat << EOF > debian/changelog
+        teapotrending (1.0-1) unstable; urgency=low
+
+          * Initial release.
+
+         -- Your Name <your.email@example.com>  $(date -R)
+        EOF
+
+        cat << EOF > debian/rules
+        #!/usr/bin/make -f
+
+        %:
+        	dh \$@
+
+        override_dh_auto_configure:
+        	cd src && qmake
+
+        override_dh_auto_build:
+        	cd src && make -j1
+
+        override_dh_auto_install:
+        	install -d \$(DESTDIR)/usr/bin
+        	install -m 755 src/TeapotRendering \$(DESTDIR)/usr/bin/TeapotRendering
+        EOF
+
+        chmod +x debian/rules
+
+    - name: Build Debian package
+      run: |
+        debuild -us -uc -b
+
+    - name: Archive build artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: teapot-rendering-deb
-        path: '*.deb'
+        name: debian-packages
+        path: |
+          ../*.deb
+          ../*.changes
+          ../*.build
