--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         Section: utils
         Priority: optional
         Maintainer: Blank-Luo <blankluo@foxmail.com>
-        Build-Depends: debhelper (>= 9), pkg-config, dpkg-dev, qt5-qmake, qtbase5-dev, qttools5-dev-tools
+        Build-Depends: debhelper (>= 9), qtbase5-dev, libgl1-mesa-dev, libglu1-mesa-dev, freeglut3-dev
         Standards-Version: 3.9.6
         Homepage: teapotrendering
         
