--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,15 +65,19 @@ jobs:
 
         cat << EOF > debian/rules
         #!/usr/bin/make -f
-        include /usr/share/dpkg/default.mk
-        
-        export QT_SELECT = qt5
-        
-        %: 
-        	dh $@
-         
+
+        %:
+        	dh \$@
+
         override_dh_auto_configure:
-        	dh_auto_configure -- DEFINES+="VERSION=$(DEB_VERSION_UPSTREAM)"
+        	cd src && qmake
+
+        override_dh_auto_build:
+        	cd src && make -j1
+
+        override_dh_auto_install:
+        	install -d \$(DESTDIR)/usr/bin
+        	sudo install -m 755 src/TeapotRendering \$(DESTDIR)/usr/bin/TeapotRendering
         EOF
 
         chmod +x debian/rules
