--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,6 +91,6 @@ jobs:
       with:
         name: debian-packages
         path: |
-          /*.deb
-          /*.changes
-          /*.build
+          teapotrendering/*.deb
+          teapotrendering/*.changes
+          teapotrendering/*.build
